# latss

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/latss/: __init__.py  latss.py
src/latss/data/: load_data.py
src/latss/label_alignment/: la.py
src/latss/preprocessing/: epochs_preprocessing.py  raw_preprocessing.py
src/latss/tsmapping/: tsm.py
src/latss/utils/: utils.py
