[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "latss"
dynamic = ["version"]
dependencies = [
  "pyriemann",
  "scipy >= 1.10.1",
  "mne",
  "mne_icalabel",
  "onnxruntime"
]
requires-python = ">=3.8"
authors = [
  {name = "Zeyad Ahmed", email = "zeyadmansour2@gmail.com"}
]
description = "Unlocking subject-independent motor imagery decoding with label alignment."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["motor imagery", "EEG", "label alignment"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[tool.setuptools_scm]
version_file = "_version.py"

[project.urls]
Homepage = "https://pypi.org/project/latss/"
Repository = "https://github.com/zeyadmohaymen/latss.git"